--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
             </div>
             <div class="about-text">
               <h2 class="section-title">
-                abo
-                <span class="title-stroke">ut</span>
+                abo<span class="title-stroke">ut</span>
                 <span class="title-square"></span>
               </h2>
               <p class="about-para">
@@ -70,6 +69,15 @@
                 voluptate dolor duis laboris et.
               </p>
             </div>
+          </div>
+        </section>
+
+        <section class="benefits">
+          <div class="content">
+            <h2 class="section-title text-center">
+              benef<span class="title-stroke">its</span>
+              <span class="title-square"></span>
+            </h2>
           </div>
         </section>
       </main>
