--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="css/reset.css" />
     <!-- 커스텀 CSS 파일 링크 -->
     <link rel="stylesheet" href="css/custom.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
   </head>
   <body>
-    <div class="wrapper" id="luxy">
+    <div class="wrapper">
       <header class="header">
         <h1 class="title" data-splitting>
           <span class="title-text-up">Parallax Effect</span><br />
@@ -81,35 +82,35 @@
 
             <ul class="benefits_lists">
               <li class="benefits_item">
-                <span class="benefits_num" data-speed="-200">/01</span>
+                <span class="benefits_num" data-speed="-250">/01</span>
                 <p class="benefits_p">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Doloremque debitis quam et illo culpa ratione.
                 </p>
               </li>
               <li class="benefits_item">
-                <span class="benefits_num" data-speed="-100">/02</span>
+                <span class="benefits_num" data-speed="-180">/02</span>
                 <p class="benefits_p">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Doloremque debitis quam et illo culpa ratione.
                 </p>
               </li>
               <li class="benefits_item">
-                <span class="benefits_num" data-speed="-150">/03</span>
+                <span class="benefits_num" data-speed="-100">/03</span>
                 <p class="benefits_p">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Doloremque debitis quam et illo culpa ratione.
                 </p>
               </li>
               <li class="benefits_item">
-                <span class="benefits_num" data-speed="-200">/04</span>
+                <span class="benefits_num" data-speed="-80">/04</span>
                 <p class="benefits_p">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Doloremque debitis quam et illo culpa ratione.
                 </p>
               </li>
               <li class="benefits_item">
-                <span class="benefits_num" data-speed="-100">/05</span>
+                <span class="benefits_num" data-speed="-280">/05</span>
                 <p class="benefits_p">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Doloremque debitis quam et illo culpa ratione.
@@ -125,9 +126,42 @@
             </ul>
           </div>
         </section>
-      </main>
 
-      <div class="sample"></div>
+        <section class="work">
+          <div class="content">
+            <h2 class="section-title text-center">
+              portfo<span class="title-stroke">lio</span>
+              <span class="title-square"></span>
+            </h2>
+            <div class="work-wrapper">
+              <div class="work-item">
+                <div class="work-item-num">/001</div>
+                <div class="work-item-image">
+                  <img src="img/3.jpg" alt="" />
+                </div>
+              </div>
+              <div class="work-item">
+                <div class="work-item-num">/002</div>
+                <div class="work-item-image">
+                  <img src="img/4.jpg" alt="" />
+                </div>
+              </div>
+              <div class="work-item">
+                <div class="work-item-num">/003</div>
+                <div class="work-item-image">
+                  <img src="img/5.jpg" alt="" />
+                </div>
+              </div>
+              <div class="work-item">
+                <div class="work-item-num">/004</div>
+                <div class="work-item-image">
+                  <img src="img/6.jpg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
     </div>
 
     <!-- GSAP CDN 파일 링크 -->
